feat: made almost all login related views responsive

--- a/public/PCEconomic/src/main/resources/templates/changepassword.html
+++ b/public/PCEconomic/src/main/resources/templates/changepassword.html
@@ -23,7 +23,7 @@
         <header th:replace="layout/layout :: header2"></header>
         <main class="container bg-cont mt-5 p-3">
             <h1 class="text-center">Nueva Contraseña</h1>
-            <form method="post" novalidate class="needs-validation"
+            <form method="post" novalidate class="needs-validation col-sm-12 col-xl-5"
                   th:action="@{/changepassword/{token}(token=${token})}"
                   th:object="${changePasswordForm}">
                 <div class="row">
