--- a/public/PCEconomic/src/main/resources/templates/lostpassword.html
+++ b/public/PCEconomic/src/main/resources/templates/lostpassword.html
@@ -24,7 +24,7 @@
         <main class="container bg-cont mt-5 p-3">
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <h1 class="text-center">Recuperar Contraseña</h1>
-                <form class="needs-validation"
+                <form class="needs-validation col-sm-12 col-xl-4"
                       th:action="@{/forgotpassword}"
                       method="post" novalidate
                       th:object="${sendEmailForm}">
