feat: added total price of the factura when watching the products (need to be formatted properly)

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -554,6 +554,9 @@
                                                                         </div>
                                                                     </li>
                                                                 </ul>
+                                                                <div class="d-flex flex-row-reverse mt-2">
+                                                                    <h4 class="total-price linea-price" th:text="'Total: ' + ${factura.preu}"></h4>
+                                                                </div>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
