--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -56,6 +56,7 @@
                     </select>
                 </div>
                 <button class="btn btn-pc-economic-dark mx-1 col" id="cercar"
+                        aria-label="Buscar"
                         data-bs-tool="tooltip" data-bs-title="Buscar" >
                     <i class="bi bi-search"></i>
                 </button>
@@ -81,7 +82,7 @@
                     </li>
                     <li th:if="${client == 'LOGOUT'}" class="nav-item d-flex justify-content-center ">
                         <div class="dropdown">
-                            <button class="nav-link btn btn-danger mt-1 dropdown-toggle" type="button"
+                            <button aria-label="Desplegable area de Clientes" class="nav-link btn btn-danger mt-1 dropdown-toggle" type="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-door-open-fill"></i>
                             </button>
@@ -93,7 +94,7 @@
                     </li>
 
                     <li class="nav-item d-flex justify-content-center ">
-                        <button type="button" class="nav-link btn btn-pc-economic-dark mt-1" data-bs-toggle="modal"
+                        <button aria-label="Cambiar idioma" type="button" class="nav-link btn btn-pc-economic-dark mt-1" data-bs-toggle="modal"
                                 data-bs-target="#modal" data-bs-tool="tooltip" data-bs-title="Cambiar Idioma">
                             <i class="bi bi-translate"></i>
                         </button>
@@ -221,9 +222,6 @@
                 }
             },
         });
-
-        const tooltipTriggerList = document.querySelectorAll('[data-bs-tool="tooltip"]')
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 
         function formatCurrency(amount) {
             return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
